<resources>

    <string name="app_name">transitTalker</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">TransitTalker</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="BKSP">P/R</string>
    <string name="SET">SET</string>
    <string name="tRaNsIt">tRaNsIt</string>
    <string name="TaLkEr">TaLkEr</string>
    <string name="image">image</string>
	<string name="prmsgs">hi</string>
</resources>