<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <android.gesture.GestureOverlayView
        android:id="@+id/gesturearea"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight=".10"
                android:orientation="vertical"
                android:weightSum="1" >

                <RelativeLayout
                    android:id="@+id/display"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight=".25"
                    android:orientation="vertical" >
                    		        
					<TextView
			            android:id="@+id/displayMID"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_centerHorizontal="true"
			            android:layout_centerVertical="true"
			            android:gravity="center"
			            android:orientation="vertical"
			            android:text="@string/prmsgs"
			            android:textAppearance="?android:attr/textAppearanceLarge" />
	
			        <TextView
			            android:id="@+id/displayTOP"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_above="@+id/displayMID"
			            android:layout_centerHorizontal="true"
			            android:gravity="center"
			            android:orientation="vertical"
			            android:text="@string/tRaNsIt"
			            android:textAppearance="?android:attr/textAppearanceLarge" />
	
			        <TextView
			            android:id="@+id/displayBOTTOM"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_below="@+id/displayMID"
			            android:layout_centerHorizontal="true"
			            android:gravity="center"
			            android:orientation="vertical"
			            android:text="@string/TaLkEr"
			            android:textAppearance="?android:attr/textAppearanceLarge" />

			        <ImageView
			            android:id="@+id/rightArrow"
			            android:layout_width="50dp"
			            android:layout_height="50dp"
			            android:layout_alignParentRight="true"
			            android:layout_centerVertical="true"
			            android:contentDescription="@string/image"
			            android:src="@drawable/rightarrow" />

			        <ImageView
			            android:id="@+id/leftArrow"
			            android:layout_width="50dp"
			            android:layout_height="50dp"
			            android:layout_alignParentLeft="true"
			            android:layout_alignTop="@+id/rightArrow"
			            android:contentDescription="@string/image"
			            android:src="@drawable/leftarrow" />
			        
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/display_status"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight=".75"
                    android:orientation="horizontal" >

		        <ImageView
		            android:id="@+id/fence"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerVertical="true"
		            android:layout_toRightOf="@+id/search"
		            android:contentDescription="@string/image"
		            android:src="@drawable/geofence" />

		        <ImageView
		            android:id="@+id/search"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerHorizontal="true"
		            android:layout_centerVertical="true"
		            android:contentDescription="@string/image"
		            android:src="@drawable/searching" />

		        <ImageView
		            android:id="@+id/pr"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerVertical="true"
		            android:layout_toLeftOf="@+id/search"
		            android:contentDescription="@string/image"
		            android:src="@drawable/prcode" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight=".90"
                android:orientation="vertical"
                android:weightSum="2" >

                <ImageButton
                    android:id="@+id/buttonClear"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:scaleType="center"
                    android:src="@drawable/prbutton" />

                <ImageButton
                    android:id="@+id/buttonSet"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:src="@drawable/setbutton" />

            </LinearLayout>
        </LinearLayout>
    </android.gesture.GestureOverlayView>

</LinearLayout>